Completed another section

--- a/py_basics.ipynb
+++ b/py_basics.ipynb
@@ -71,9 +71,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hello' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-1cd80308eb4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhello\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'hello' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(hello)"
    ]
@@ -87,9 +99,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-25-7c6094c6187c>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-25-7c6094c6187c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print(six * five')\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
    "source": [
     "# write a program that wont run because of a syntax error\n",
     "print(six * five')"
@@ -97,9 +118,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'primetime' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-26-6af334d02d88>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# write a program that crashes only while it’s running because it has a runtime error”\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprimetime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'primetime' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# write a program that crashes only while it’s running because it has a runtime error”\n",
     "print(primetime)"
@@ -107,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -638,18 +671,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIBRARY\n",
+      "library\n",
+      "Library\n",
+      "population\n",
+      "ace\n",
+      "space\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print('library'.upper())\n",
     "print('library'.lower())\n",
     "print('library'.capitalize())\n",
     "\n",
-    "word2 = '  population       ' \n",
-    "print(word2.rstrip())\n",
+    "\n",
+    "word2 = '  population' \n",
+    "other_word = 'ace  '\n",
+    "my_word = ' space  '\n",
     "print(word2.lstrip())\n",
-    "print(word2.strip())\n",
+    "print(other_word.rstrip())\n",
+    "print(my_word.strip())\n",
     "\n",
     "\n",
     "word3 = 'floss'\n",
@@ -662,9 +715,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "animals\n",
+      "badger\n",
+      "honey bee\n",
+      "honey badger\n",
+      "ANIMALS\n",
+      "BADGER\n",
+      "HONEY BEE\n",
+      "HONEY BADGER\n",
+      "Filet Mignon\n",
+      "Brisket\n",
+      "Cheeseburger\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "str1 = 'Animals' # convert the listed str to lower case\n",
     "str2 = 'Badger'\n",
@@ -715,18 +794,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "input()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey, what's up ?Working through a Python book\n",
+      "You said: Working through a Python book\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = \"Hey, what's up ?\"\n",
     "user_input = input(prompt)\n",
@@ -735,9 +814,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What should I shout? Lakers are going back to back \n",
+      "Well, if you insist...LAKERS ARE GOING BACK TO BACK \n"
+     ]
+    }
+   ],
    "source": [
     "response = input('What should I shout? ')\n",
     "shouted_response = response.upper()\n",
@@ -753,25 +841,394 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ask me a questionHow long does it take to become an Engineer?\n",
-      "How long does it take to become an Engineer?\n",
-      "how long does it take to become an engineer?\n",
-      "44\n"
+      "Ask me a question. How far is the moon from Earth?\n",
+      "How far is the moon from Earth?\n",
+      "how far is the moon from earth?\n",
+      "31\n"
      ]
     }
    ],
    "source": [
-    "question = input('Ask me a question')\n",
-    "print(question)\n",
-    "print(question.lower())\n",
-    "print(len(question))"
+    "question = input('Ask me a question. ') \n",
+    "print(question) # write a program that takes input from the user and displays the text, \n",
+    "print(question.lower()) # displays the text in lower case\n",
+    "print(len(question)) # displays the length "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tell me your password: swordfish\n",
+      "The first letter you was: S\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_input = input('Tell me your password: ') \n",
+    "first_letter = my_input[0].upper()\n",
+    "print('The first letter you was: ' + first_letter)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Working with Strings and Numbers "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = 23\n",
+    "number + number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'24242424'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number = '24'\n",
+    "number * 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### TypeError"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can't multiply sequence by non-int of type 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-47-9b8ed7941e85>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnumber\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m'3'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "number * '3'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### String Conversion to Numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number to be tripled: 9\n",
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = input('Enter a number to be tripled: ')\n",
+    "tripled_num = int(num) * 3\n",
+    "print(tripled_num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Number conversion to String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I am going to eat 12 grapes.'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_of_grapes = 12\n",
+    "'I am going to eat ' + str(num_of_grapes) + ' grapes.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I have 8 grapes left.'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grapes_left = 20\n",
+    "\n",
+    "'I have ' + str(grapes_left - num_of_grapes) + ' grapes left.'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "900\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_num = '30'\n",
+    "print(int(my_num) * 30) # convert the string to an int and verify that you can multiply it "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21.98\n"
+     ]
+    }
+   ],
+   "source": [
+    "pi = '3.14'\n",
+    "print(float(pi) * 7) # convert the string to a float and verify that you can multiply it "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200lbs\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight = 'lbs' # create a string object and int object and display them side by side using print\n",
+    "pounds = 200\n",
+    "print(str(pounds) + weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pick a number: 2\n",
+      "Pick another number: 4\n",
+      "The product of 2 and 4 is 8.0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "first_num = input('Pick a number: ')\n",
+    "second_num = input('Pick another number: ')\n",
+    "product = float(first_num) * float(second_num)\n",
+    "\n",
+    "print('The product of ' + str(first_num) + ' and ' + str(second_num) + ' is ' + str(product) + '.')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Streamline your Print Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eddy has 2 heads and 3 arms.\n",
+      "Eddy has 2 heads and 3 arms\n",
+      "3 times 5 is 15\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Eddy has 2 heads and 3 arms'"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name = 'Eddy'\n",
+    "heads = 2\n",
+    "arms = 3\n",
+    "\n",
+    "print(name + ' has ' + str(heads) + ' heads and ' + str(arms) + ' arms.')\n",
+    "\n",
+    "print(f'{name} has {heads} heads and {arms} arms') # f-strings are simpler to write\n",
+    "\n",
+    "a = 3\n",
+    "b = 5\n",
+    "\n",
+    "print(f'{a} times {b} is {a * b}')\n",
+    "\n",
+    "\"{} has {} heads and {} arms\".format(name, heads, arms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2 kg is the weight of the newt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "weight = 0.2\n",
+    "animal = 'newt'\n",
+    "print(str(weight) + ' kg is the weight of the ' + animal + '.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2 kg is the weight of the newt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('{} kg is the weight of the {}.'.format(weight, animal))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2 is the weight of the newt.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{weight} is the weight of the {animal}.')"
    ]
   }
  ],
