--- a/py_basics.ipynb
+++ b/py_basics.ipynb
@@ -1194,7 +1194,7 @@
    "source": [
     "weight = 0.2\n",
     "animal = 'newt'\n",
-    "print(str(weight) + ' kg is the weight of the ' + animal + '.')"
+    "print(str(weight) + ' kg is the weight of the ' + animal + '.') # string concatenation"
    ]
   },
   {
@@ -1211,7 +1211,7 @@
     }
    ],
    "source": [
-    "print('{} kg is the weight of the {}.'.format(weight, animal))"
+    "print('{} kg is the weight of the {}.'.format(weight, animal)) # format()"
    ]
   },
   {
@@ -1228,7 +1228,560 @@
     }
    ],
    "source": [
-    "print(f'{weight} is the weight of the {animal}.')"
+    "print(f'{weight} is the weight of the {animal}.') # f-string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find a String in a String"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "-1\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrase = 'The final countdown'\n",
+    "print(phrase.find('final'))\n",
+    "print(phrase.find('age')) # returns -1 when the desired substring isn't found\n",
+    "print(phrase.find('AGE')) # returns -1 because matching is case sensitive "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Replacing strings with replace method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm telling you the truth, nothing but the truth.\n",
+      "Can I sing?\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_story = \"I'm telling you lies, nothing but lies.\"\n",
+    "print(my_story.replace('lies', 'the truth'))\n",
+    "\n",
+    "text = 'Can I live?'\n",
+    "new_text = text.replace('live', 'sing')\n",
+    "print(new_text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "Somebody xaid xomething to Samantha\n",
+      "Say something: something \n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('AAA'.find('a')) \n",
+    "\n",
+    "print('Somebody said something to Samantha'.replace('s', 'x'))\n",
+    "\n",
+    "my_input = input('Say something: ')\n",
+    "print(my_input.find('s')) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter some text: I like to eat bread and eggs\n",
+      "I 1ik3 70 347 8r34d 4nd 3gg5\n"
+     ]
+    }
+   ],
+   "source": [
+    "translate = input('Enter some text: ')\n",
+    "\n",
+    "translation = translate.replace('a', '4')\n",
+    "translation = translation.replace('b', '8')\n",
+    "translation = translation.replace('e', '3')\n",
+    "translation = translation.replace('l', '1')\n",
+    "translation = translation.replace('o', '0')\n",
+    "translation = translation.replace('s', '5')\n",
+    "translation = translation.replace('t', '7')\n",
+    "\n",
+    "print(translation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Integers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(29)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num = '24'\n",
+    "int(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200000000\n",
+      "200000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(200000000)\n",
+    "print(200_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Floats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(4.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "23.0"
+      ]
+     },
+     "execution_count": 138,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "float('23')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1002.0\n",
+      "2000.0\n",
+      "25000.0\n",
+      "4000000000000.0\n",
+      "0.006\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(1002.)\n",
+    "print(2_000.)\n",
+    "print(25e3)\n",
+    "print(4e+12)\n",
+    "print(6e-3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25000000\n",
+      "25000000\n",
+      "175000.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "inf"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num1 = 25_000_000 # print 25 million with & without underscores \n",
+    "num2 = 25000000\n",
+    "\n",
+    "print(num1) \n",
+    "print(num2)      \n",
+    "\n",
+    "num = 175e+3 # print 175000.0 using e notation\n",
+    "print(num)\n",
+    "\n",
+    "2e308 # find the smallest exponent N for 2e<N> that returns inf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9 + 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.0"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "3. + 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "9 - 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.5\n",
+      "5\n",
+      "11\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(4.5 - 2)  # most PEP compliant\n",
+    "print(2 --3)\n",
+    "print(7- -4)\n",
+    "print(9--9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56\n",
+      "32.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(8 * 7)\n",
+    "print(6.5 * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n",
+      "2\n",
+      "-5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(8 / 4)\n",
+    "print(8 // 4)\n",
+    "print(-9 // 2) # 9 is divided by 2 then 4.5 is rounded up to 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "343\n",
+      "1296\n",
+      "18.49\n",
+      "0.04\n",
+      "0.01\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(7 ** 3)\n",
+    "print(6 ** 4)\n",
+    "print(4.3 ** 2)\n",
+    "print(5 ** -2)\n",
+    "print(10 ** -2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(9 % 5)\n",
+    "print(16 % 7)\n",
+    "print(19 % 4)\n",
+    "print(6 % -2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10.0\n",
+      "-7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(2 * 3 - 1)\n",
+    "print(4 / 2 + 2 ** 3)\n",
+    "print(-3 + (-5 * 2 + 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a base: 9 \n",
+      "Enter an exponent: 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'9  to the power of 3 = 729'"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base = input('Enter a base: ')\n",
+    "exponent = input('Enter an exponent: ')\n",
+    "result = int(base) ** int(exponent)\n",
+    "f'{base} to the power of {exponent} = {result}' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Floating-point representation error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.30000000000000004"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    ".1 + .2"
    ]
   }
  ],
