Added exercises from chapter 5

--- a/py_basics.ipynb
+++ b/py_basics.ipynb
@@ -1783,6 +1783,397 @@
    "source": [
     ".1 + .2"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Math Functions and Number Methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n",
+      "4.5\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(63.5)) # for rounding numbers to some number of decimal places\n",
+    "print(abs(4.5)) # for getting the absolute value of a number\n",
+    "print(pow(2, 4)) # for raising a number to some power"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "6\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(3.3))\n",
+    "print(round(5.5))\n",
+    "print(round(8.5)) # if the number to the left is even you round down if its odd you round up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 233,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.36\n",
+      "6.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(round(3.356, 2))\n",
+    "print(round(6.78, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.23\n",
+      "9.89\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(abs(6.23))\n",
+    "print(abs(9.89))\n",
+    "print(abs(-7)) # always returns a positive number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "625\n",
+      "0.0625\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pow(5, 4))\n",
+    "print(pow(2, -4))\n",
+    "print(pow(5, 4, 2)) # x ** y % z – 5 ** 4 % 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 6.7\n",
+    "print(num.is_integer())\n",
+    "\n",
+    "num = 2.\n",
+    "print(num.is_integer()) # returns True if number has no fractional part"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 6.789\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'6.789 rounded to 2 decimal places is 6.79'"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_num = input('Enter a number: ')\n",
+    "rounded = round(float(my_num), 2)\n",
+    "f'{my_num} rounded to 2 decimal places is {rounded}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 241,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: -99\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The absolute value of -99 is 99'"
+      ]
+     },
+     "execution_count": 241,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_other_num = input('Enter a number: ')\n",
+    "my_abs_num = abs(int(my_other_num))\n",
+    "\n",
+    "f'The absolute value of {my_other_num} is {my_abs_num}'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number: 10.\n",
+      "Enter another number: 3.\n",
+      "Is the difference between 10.0 and 3.0 an integer?\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'True!'"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_number = float(input('Enter a number: '))\n",
+    "another_num = float(input('Enter another number: '))\n",
+    "\n",
+    "print(f'Is the difference between {my_number} and {another_num} an integer?')\n",
+    "f'{(my_number - another_num).is_integer()}!'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Formatting in Style"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of pi is 3.14\n",
+      "7.565\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'3,456.23'"
+      ]
+     },
+     "execution_count": 278,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 3.1415626\n",
+    "print(f'The value of pi is {n:.2f}') # : colon indicates the formatting specification, 2 rounds the number to two decimal places and the f tells python to display n a fixed-point number\n",
+    "\n",
+    "m = 7.5647\n",
+    "print(f'{m:.3f}')\n",
+    "\n",
+    "o = 1000000000\n",
+    "print(f\"He's worth {o:,} dollars\") # allows comma insertion  \n",
+    "\n",
+    "p = 3456.23\n",
+    "f'{p:,.2f}' # rounds and also groups the int by thousands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'After spending $5456.00, I was left with $4,544.00.'"
+      ]
+     },
+     "execution_count": 283,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "balance = 10000\n",
+    "spent = 5456\n",
+    "remaining = balance - spent\n",
+    "\n",
+    "f'After spending ${spent:.2f}, I was left with ${remaining:,.2f}.' "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Shooting 40.0% or above makes you an awesome 3 point shooter in the NBA.'"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "three_point_percentage = .4\n",
+    "f'Shooting {three_point_percentage:.1%} or above makes you an awesome 3 point shooter in the NBA.' # Used to display percentages "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1.15 is the result of the calculation'"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result = 3 ** .125\n",
+    "f'{result:.2f} is the result of the calculation.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'He makes $150,000 per year.'"
+      ]
+     },
+     "execution_count": 294,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "salary = 150000\n",
+    "f'He makes ${salary:,} per year.'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'20% is the result of the calculation.'"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "percentage = 2 / 10\n",
+    "f'{percentage:.0%} is the result of the calculation.'"
+   ]
   }
  ],
  "metadata": {
