Added exercises from chapter 6

--- a/py_basics.ipynb
+++ b/py_basics.ipynb
@@ -2024,7 +2024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -2032,7 +2032,8 @@
      "output_type": "stream",
      "text": [
       "The value of pi is 3.14\n",
-      "7.565\n"
+      "7.565\n",
+      "He's worth 1,000,000,000 dollars\n"
      ]
     },
     {
@@ -2041,7 +2042,7 @@
        "'3,456.23'"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2114,44 +2115,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.15 is the result of the calculation'"
+       "'1.147 is the result of the calculation.'"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result = 3 ** .125\n",
-    "f'{result:.2f} is the result of the calculation.'"
+    "f'{result:.3f} is the result of the calculation.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'He makes $150,000 per year.'"
+       "'He makes $150,000.00 per year.'"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "salary = 150000\n",
-    "f'He makes ${salary:,} per year.'"
+    "f'He makes ${salary:,.2f} per year.'"
    ]
   },
   {
@@ -2174,6 +2175,243 @@
     "percentage = 2 / 10\n",
     "f'{percentage:.0%} is the result of the calculation.'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 311,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function len(obj, /)>"
+      ]
+     },
+     "execution_count": 311,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "builtin_function_or_method"
+      ]
+     },
+     "execution_count": 312,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 313,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 313,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('Hello Motorola')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiply(x, y, z):\n",
+    "    \"\"\"Returns the product of three numbers x, y, z\"\"\"\n",
+    "    product = x * y * z\n",
+    "    return product\n",
+    "multiply(7, 6, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function multiply in module __main__:\n",
+      "\n",
+      "multiply(x, y, z)\n",
+      "    Returns the product of three numbers x, y, z\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(multiply)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exercises"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "216\n",
+      "729\n",
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cube(num):\n",
+    "    \"\"\"Returns the value of the given number to the third power\"\"\"\n",
+    "    return num ** 3\n",
+    "\n",
+    "print(cube(6))\n",
+    "print(cube(9))\n",
+    "print(cube(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 328,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Alex!\n",
+      "None\n",
+      "Hello Jamie!\n",
+      "None\n",
+      "Hello Ty!\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name):\n",
+    "    print(f'Hello {name}!')\n",
+    "          \n",
+    "print(greet('Alex'))\n",
+    "print(greet('Jamie'))\n",
+    "print(greet('Ty'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51.8\n",
+      "Enter a temp in degrees F: 11\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'temp_cell' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-349-aa248128b4dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mtemp_far\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Enter a temp in degrees F: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mtemp_far\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconvert_cel_to_far\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp_cell\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'temp_cell' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_cel_to_far(temp_cel):\n",
+    "    \"\"\"Converts the given temp to fahrenheit\"\"\"\n",
+    "    temp_far = temp_cel * 9 / 5 + 32\n",
+    "    return temp_far\n",
+    "\n",
+    "print(convert_cel_to_far(11))\n",
+    "\n",
+    "temp_far = input('Enter a temp in degrees F: ')\n",
+    "\n",
+    "temp_far = convert_cel_to_far(temp_cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 348,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.999999999999998\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_far_to_cel(temp_far):\n",
+    "    \"\"\"Converts the given temp to celsius\"\"\"\n",
+    "    temp_cel = (temp_far - 32) * 5/9\n",
+    "    return temp_cel\n",
+    "print(convert_far_to_cel(51.8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
